--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
         var deathcase = [];
         var medcolormap = { 'Child Health Center': 1, 'Diagnostic & Treatment Center': 3, 'Acute Care Hospital': 6, 'Nursing Home': 8 };
         var promises = [d3.json(nycgeourl), d3.csv(interneturl, function (d) {
-            internet.set(+d.modzcta, +d.perc);
+            internet.set(+d.modzcta, [+d['no highschool'], +d['highschool'], +d['college'], +d['perc']]);
         }), d3.csv(medicalurl, function (d) {
             medical.push([d.NAME, [+d.lng, +d.lat], d.CLASS]);
         }), d3.csv(medicaldisturl, function (d) {
@@ -588,32 +588,32 @@
             modname.set(+d.MODIFIED_ZCTA, [d.NEIGHBORHOOD_NAME, +d.COVID_DEATH_RATE]);
             deathcase.push([+d.deathtocase, [+d.lng, +d.lat], +d.COVID_CASE_RATE, +d.COVID_DEATH_RATE, +d.MODIFIED_ZCTA]);
         })];
-        var physcolors = d3.scaleQuantize().domain([953.1778456787914, 20912.30989159827]).range(d3.schemeReds[9]);
+        var physcolors = d3.scaleQuantize().domain([953.1778456787914, 20912.30989159827]).range(d3.schemeGreens[9]);
         var conccolorsinfo = d3.scaleQuantize().domain([0, 1]).range(d3.schemeReds[9]);
         var conccolorsphys = d3.scaleQuantize().domain([0, 1]).range(d3.schemeGreens[9]);
         var conccolorssvi = d3.scaleQuantize().domain([0, 1]).range(d3.schemePurples[9]);
         Promise.all(promises).then(ready);
         function ready([nyc]) {
             nyc.features.pop();
-            var infocolors = d3.scaleQuantize().domain(d3.extent(internet.values())).range(d3.schemeReds[5]);
+            var infocolors = d3.scaleQuantize().domain([0, 0.342007343]).range(d3.schemeReds[9]);
             infogrp.selectAll('path').data(nyc.features).enter()
                 .append('path').attr('class', 'zipcode')
-                .attr('fill', d => infocolors(internet.get(d.properties.modzcta))).attr('stroke', 'gray').attr('d', path)
+                .attr('fill', d => infocolors(internet.get(d.properties.modzcta)[3])).attr('stroke', 'gray').attr('d', path)
                 .on('mouseover', function (d) {
                     d3.select('#tooltip').style('left', d3.event.pageX + 'px').style('top', d3.event.pageY + 'px').select('#value')
-                        .html('<p>No internet percentage:<br>' + String((100 * internet.get(d.properties.modzcta)).toFixed(2)) + '%</p>');
+                        .html('<p>No internet percentage:<br>' + String((100 * internet.get(d.properties.modzcta)[3]).toFixed(2)) + '%</p>');
                     d3.select('#tooltip').classed('hidden', false);
                 })
                 .on('mousemove', function (d) {
                     d3.select('#tooltip').style('left', d3.event.pageX + 'px').style('top', d3.event.pageY + 'px').select('#value')
-                        .html('<p>No internet percentage:<br>' + String((100 * internet.get(d.properties.modzcta)).toFixed(2)) + '%</p>');
+                        .html('<p>No internet percentage:<br>' + String((100 * internet.get(d.properties.modzcta)[3]).toFixed(2)) + '%</p>');
                     d3.select('#tooltip').classed('hidden', false);
                 })
                 .on('mouseout', function () {
                     d3.select('#tooltip').classed('hidden', true);
                 })
                 .on('click', function (d) {
-                    drawchart(internet.get(d.properties.modzcta));
+                    drawinfochart(internet.get(d.properties.modzcta));
                 });
             // physical, medical facilities points
             physgrp.selectAll('path').data(nyc.features).enter()
@@ -823,21 +823,21 @@
 
         // info chart
         var infochartsvg = chartconatiner.append('svg').attr('height', chartheight - 20).attr('width', chartwidth - 20).attr('class', 'infochartsvg');
-        var chartgrp = infochartsvg.append('g').attr('transform', 'translate(' + String(chartwidth / 2) + ', ' + String(chartheight / 2) + ')');
-        var circle = chartgrp.append('path').attr('d', d3.arc()({
-            innerRadius: 90,
-            outerRadius: 150,
-            startAngle: 0,
-            endAngle: Math.PI * 2 * 0.2
-        })).attr('fill', '#ef476f');
+        var infochartgrp = infochartsvg.append('g').attr('transform', 'translate(' + String(chartwidth / 2) + ', ' + String(chartheight / 2) + ')');
+        var infopiecolor = [1, 3, 6];
+        var infopiearc = d3.arc().innerRadius(90).outerRadius(150);
+        // var infopie = d3.pie().value(d => d.value);
+        var infopie = d3.pie();
+        // var infopiedataready = infopie(d3.entries([0.18611142544604126,0.5359662027083097,0.277922371845649]));
+        var infopiearcs = infochartgrp.selectAll("arc").data(infopie([0.18611142544604126,0.5359662027083097,0.277922371845649])).enter()
+            .append('path').attr('fill', (d, i) => d3.schemeCategory10[infopiecolor[i]]).attr('d', infopiearc);
+        //var infopiesegs = chartgrp.data(infopiedataready).enter().append('path')
+        //    .attr('d', infopiearc).attr('fill', (d, i) => d3.schemeCategory10[infopiecolor[i]]);
 
-        function drawchart(perc) {
-            circle.transition().duration(1000).attr('d', d3.arc()({
-                innerRadius: 90,
-                outerRadius: 150,
-                startAngle: 0,
-                endAngle: Math.PI * 2 * perc
-            }));
+        function drawinfochart(data) {
+            console.log(data.slice(0, 3));
+            var infochartsegs = infopiearcs.selectAll('path').data(infopie(data.slice(0, 3)));
+            infochartsegs.enter().append('path').merge(infochartsegs).transition().duration(1000).attr('d', infopiearc);
         };
 
         // phys chart
