final version - index

--- a/201207_Ichi/index.html
+++ b/201207_Ichi/index.html
@@ -150,10 +150,10 @@
             </div>
             <div class="column2">
                 <div class="bgcontent frame" id="triggerbg1">
-                    <p
-                        style='font-size:18pt; padding-left:0px; padding-right:20px; padding-top:350px;'>
+                    <p style='font-size:18pt; padding-left:0px; padding-right:20px; padding-top:350px;'>
                         Victims of COVID</p>
-                        There have been many cases of COVID-19 in US, but have all racial groups equally suffered from this new virus? Researchers have already studied the racial inequity in COVID-19 by using big data.
+                    There have been many cases of COVID-19 in US, but have all racial groups equally suffered from this
+                    new virus? Researchers have already studied the racial inequity in COVID-19 by using big data.
                 </div>
             </div>
         </div>
@@ -173,10 +173,12 @@
             </div>
             <div class="column2">
                 <div class="dummyframe" id="triggerbg2">
-                    <p
-                        style='font-size:18pt; padding-left:0px; padding-right:20px; padding-top:380px;'>
-                        High Infection Rates in White-dominant Cities</p>
-                        The Atlas launched a voluntary project The COVID Tracking Project and has collected data on COVID-19 testing and patient outcomes from 50 states, and analyzed racial inequity. One of the finding though this project is that high infection rates are seen more in the White-dominant cities.
+                    <h1 style="text-align: center; padding-top: 40%;">High Infection Rates in White-dominant Cities</h1>
+                    <p style='font-size:18pt; padding-left:0px; padding-right:20px; padding-top:380px;'>
+                        The Atlas launched a voluntary project The COVID Tracking Project and has collected data on
+                        COVID-19 testing and patient outcomes from 50 states, and analyzed racial inequity. One of the
+                        finding though this project is that high infection rates are seen more in the White-dominant
+                        cities.</p>
                 </div>
             </div>
         </div>
@@ -196,11 +198,11 @@
             </div>
             <div class="column2">
                 <div class="dummyframe" id="triggerbg3">
-                    <p
-                        style='font-size:18pt; padding-left:0px; padding-right:20px; padding-top:330px;'>
+                    <p style='font-size:18pt; padding-left:0px; padding-right:20px; padding-top:330px;'>
                         High Death Rates in Black-dominant Cities
                     </p>
-                    On the other hands, it also found that the high death rates are seen more in the Black-dominant cities.
+                    On the other hands, it also found that the high death rates are seen more in the Black-dominant
+                    cities.
                 </div>
             </div>
         </div>
@@ -220,10 +222,10 @@
             </div>
             <div class="column2">
                 <div class="dummyframe" id="triggerbg4">
-                    <p
-                        style='font-size:18pt; padding-left:0px; padding-right:20px; padding-top:400px;'>
+                    <p style='font-size:18pt; padding-left:0px; padding-right:20px; padding-top:400px;'>
                         Death from COVID and Social Vulnerability</p>
-                        This relatively low infection and high death rates in the Black communities lead to one assumption that social vulnerability is the main reason why they turned to be the victims.
+                    This relatively low infection and high death rates in the Black communities lead to one assumption
+                    that social vulnerability is the main reason why they turned to be the victims.
                 </div>
             </div>
         </div>
@@ -243,17 +245,20 @@
             </div>
             <div class="column2">
                 <div class="dummyframe" id="triggerbg5">
-                    <p
-                        style='font-size:18pt; padding-left:0px; padding-right:20px; padding-top:200px;'>
+                    <p style='font-size:18pt; padding-left:0px; padding-right:20px; padding-top:200px;'>
                         SVI+</p>
-                        Centers for Disease Control and Prevention (CDC) provides Social vulnerability index (SVI) in order to help local officials to identify difficulties of communities. SVI is composed of widely ranged criteria such as socioeconomic status, disability, and transportation ability. However, are these enough to explain the situation that derives from the new virus? We suppose that physical accessibility to medical facilities that can take care of patients of this new virus and information accessibility to gather the relevant information regarding the virus is relevant to the death rates.
-                    <p
-                        style='font-size:18pt; padding-left:0px; padding-right:20px; padding-top:20px;'>
+                    Centers for Disease Control and Prevention (CDC) provides Social vulnerability index (SVI) in order
+                    to help local officials to identify difficulties of communities. SVI is composed of widely ranged
+                    criteria such as socioeconomic status, disability, and transportation ability. However, are these
+                    enough to explain the situation that derives from the new virus? We suppose that physical
+                    accessibility to medical facilities that can take care of patients of this new virus and information
+                    accessibility to gather the relevant information regarding the virus is relevant to the death rates.
+                    <p style='font-size:18pt; padding-left:0px; padding-right:20px; padding-top:20px;'>
                         Questions</p>
-                        <p>1) How do these types of accessibility exist?</p>
-                        <p>2) How do they relate to the death cases?</p>
-                        <p>3) Do they help SVI explain the situation better?</p>
-                      <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+                    <p>1) How do these types of accessibility exist?</p>
+                    <p>2) How do they relate to the death cases?</p>
+                    <p>3) Do they help SVI explain the situation better?</p>
+                    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
                 </div>
             </div>
         </div>
@@ -274,7 +279,10 @@
                 <div class="frame cscomment">
                     <p style="padding-top: 30vh; font-size: 18pt;">New York City in ZIP-scale
                         as a case study</p>
-                        We focus on New York City as a case study, because it has wide variety of data, racial diversity and a number of medical facilities. Depending on the format of the collected data, we will focus on ZIP scale as seen in the left-hand racial dot map. This map works is a reference to relate the demographical condition with the following research into the accessibility and SVI.
+                    We focus on New York City as a case study, because it has wide variety of data, racial diversity and
+                    a number of medical facilities. Depending on the format of the collected data, we will focus on ZIP
+                    scale as seen in the left-hand racial dot map. This map works is a reference to relate the
+                    demographical condition with the following research into the accessibility and SVI.
                 </div>
             </div>
         </div>
