--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <title>Enquity during COVID</title>
+    <title>Equity during COVID</title>
     <meta name="description" content="11.454 Big Data and Visualization">
     <meta name="author" content="ZihanMEI, Ryuhei Ichikura, Beko Liu">
 
